--- a/src/produits-page/produits-page/produits.css
+++ b/src/produits-page/produits-page/produits.css
@@ -4,7 +4,7 @@
   --gris-foncé: #4B5563;
   --blanc: #ffffff;
 }
-.card-container{
+.card-container2{
     display: flex;
     /* Si le conteneur est étroit, les éléments seront disposés sur
     plusieurs rangées plutôt que hors du cadre.*/
@@ -15,7 +15,7 @@
     z-index : -2;
     margin-bottom: 50px;
 }
-.card-img{
+.card-produit-img2{
     width:13rem;
     margin-bottom: 1rem;
     height: 20rem;
@@ -23,13 +23,13 @@
     border-radius: 8px;
 
 }
-.card-details{
+.card-produit-details2{
     margin: auto;
     margin-left: 1rem;
     gap: 1px;
 
 }
-.card{
+.card-produit2{
     background-color: #f5f6f362;
     margin: 20px;
     border: 2px solid #ededed;
@@ -40,11 +40,11 @@
 
 
 }
-.card-title{
+.card-produit-title2{
     
     margin-bottom: 1rem;
 }
-.card-reviews{
+.card-produit-reviews2{
     margin-bottom: 1rem;
     display: flex;
 }
@@ -56,17 +56,30 @@
     font-size:0.9rem ;
     margin-left: 10px;
 }
-.card-price .price{
+.card-produit-price2 .price{
     font-size: 25px;
     margin-bottom: 4%;
 }
-.card-price{
+.card-produit-price2{
 
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-.btn-ajouter{
+.btn-ajouter2{
+  padding : 4px 7px;
+  margin-right: 8px;
+  background-color:var(--orange);  
+  background: var(--orange);
+  border:none;
+  border: 0.6px solid #ccc;
+  border-radius: 5px;
+  color: #ffffff;
+  cursor: pointer;
+  margin-bottom: 4%;
+  box-shadow: inset 0 0 15px rgb(152, 105, 19);
+}
+.btn-ajouter2{
   padding : 4px 7px;
   margin-right: 8px;
   background-color:var(--orange);  
