--- a/src/styles.css
+++ b/src/styles.css
@@ -50,7 +50,7 @@ body, html, #root { height: 100%; }
 
 }
 
-.container { margin: 28px auto; width: 92%; max-width: 1100px; padding: 24px 0 80px; }
+.container1 { margin: 28px auto; width: 92%; max-width: 1100px; padding: 24px 0 80px; }
 
 .title { text-align: center; margin-top: 6px; }
 .title h1 { font-size: 36px; font-weight: 800; color: #222; display:inline-block; }
