--- a/src/propos/propos.css
+++ b/src/propos/propos.css
@@ -1,33 +1,172 @@
-.propos{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+*{
+  margin: 0px;
+  padding: 0px;
+  box-sizing:border-box;
+  font-family: sans-serif;
 }
-.container-propos {
-  background-color: aqua;
+.section-propos{
+  height: 100vh;
   width: 100%;
-  height: 50vh; /* يأخذ كامل ارتفاع الشاشة */
-  display: flex;
-  flex-direction: row; /* ترتيب عمودي للعناصر */
-  justify-content: center; /* المنتصف عموديًا */
-       /* المنتصف أفقيًا */
+}
+.section-propos .container-propos{
+  width: 80%;
+  display: block;
+  margin: 0px auto;
+  padding: 50px 0px;
+  
+}
+.container-propos .title-propos{
+  width: 100%;
+  text-align: center;
+  margin-bottom:50px ;
+}
+.container-propos .title-propos h1{
+  text-transform: uppercase;
+  font-size: 35px;
+  color: #F19800;
+
+}
+.container-propos .title-propos h1::after{
+  content: "";
+  height: 5px;
+  width: 100px;
+  background-color: #ecbc6e;
+  border-radius: 25px;
+  display: block;
   margin: auto;
 }
-.div1{
-    background-color: red;
-    width: 30% ;
+.content-propos {
+  float: left;
+  width: 55%;
+
 }
-.logo-propos{
-    width: 90%;
+.image-section-propos{
+  float: right;
+  width: 40%;
 }
-p{
-    width: 30%;
-    font-size: 1.1rem;         /* حجم الخط مناسب للقراءة */
-  line-height: 1.6;          /* ارتفاع السطر يجعل النص مريحًا */
-  color: #333;               /* لون النص داكن واحترافي */
-  text-align: justify;       /* محاذاة النص من الطرفين */
-  margin: 1rem 0;            /* مسافة فوق وتحت الفقرة */
-  padding: 0 1rem;           /* مسافة داخلية يمين ويسار */
-  font-family: 'Segoe UI', sans-serif; /* خط أنيق ومقروء */
+.image-section-propos img{
+  width: 100%;
+  height: auto;
+}
+.content-propos .article-propos h3{
+  color: #a3a3a3;
+  font-size: 17px;
+  
+}
+.content-propos .article-propos p{
+  margin-top: 20px;
+  font-size: 16px;
+  line-height: 1.5;
+  color:#333
+}
+.content-propos .article-propos .btn-propos{
+  margin-top: 50px;
+
+}
+.content-propos .article-propos .btn-propos .link-propos{
+  padding: 8px 25px;
+  background-color: #F19800;
+  border-radius: 40px;
+  color: #fff;
+  font-size: 18px;
+  letter-spacing: 1.5px;
+}
+.content-propos .article-propos .btn-propos .link-propos:hover{
+  color:#fff ;
+  background-color: #F19800;
+  transition: 1s ease;
+}
+.container-propos .social-propos{
+  width: 100%;
+  clear: both;
+  margin-top: 50px;
+  text-align: center;
+  display: inline-block;
+
+}
+.container-propos .social-propos .link-social-propos{
+  color: gray;
+  font-size: 40px;
+  height: 45px;
+  width: 45px;
+  border-radius: 50%;
+  line-height: 45px;
+  text-align: center;
+  
+  margin: 0px 5px;
+}
+.container-propos .social-propos .link-social-propos:hover{
+  color: #fff;
+  transition: 1s ease;
+  transform: rotate(39);
+}
+.social-propos {
+  position: absolute;
+  bottom: 5px; 
+  right: 20px; 
+  display: flex;
+  gap: 10px;
+  z-index: 10;
+}
+.section-propos {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+}
+@media screen and (max-width: 768px) {
+  .container-propos {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center; 
+    width: 100%;
+    margin: auto;
+  }
+
+  .content-propos,
+  .image-section-propos {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  .image-section-propos img {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: auto;
+  }
+
+  .title-propos h1 {
+    text-align: center;
+    font-size: 30px;
+  }
+
+  .btn-propos {
+    text-align: center;
+  }
+
+  .link-propos {
+    padding: 6px 15px;
+    font-size: 16px;
+  }
+
+  .social-propos {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 20px;
+    
+    
+  }
+
+  .link-social-propos {
+    font-size: 19px;
+    height: 35px;
+    width: 35px;
+    line-height: 35px;
+    text-align: center;
+    border-radius: 50%;
+    
+  }
 }
 
