--- a/src/produits-page/produits-page/produits.css
+++ b/src/produits-page/produits-page/produits.css
@@ -4,6 +4,9 @@
   --gris-foncé: #4B5563;
   --blanc: #ffffff;
 }
+body{
+    background-color: white;
+}
 .card-container2{
     display: flex;
     
@@ -30,6 +33,9 @@
     
     gap: 1px;
 
+}
+.container{
+    background-color: white;
 }
 .card-produit2{
     background-color: #f5f6f362;
