--- a/src/propos/propos.css
+++ b/src/propos/propos.css
@@ -154,7 +154,7 @@
   }
 
   .social-propos {
-    position: static; /* يلغي التمركز المطلق */
+    position: absolute;
     display: flex;
     justify-content: center;
     gap: 10px;
