--- a/src/contact/contact.css
+++ b/src/contact/contact.css
@@ -47,20 +47,20 @@
     width: 25%;
 
 }
-input {
+.input-contact{
     width: 100%;
     height: 30px;
     border: none;
-    margin-left: 20px;
+    margin-left: 2px;
 }
-textarea{
-    width: 100%;
+.textarea-contact{
+    width: 90%;
     height: 100px;
     border: none;
     border-radius: 5px;
 }
-.form-contact  input,
-.form-contact  textarea , 
+.form-contact  .input-contact,
+.form-contact  .textarea-contact , 
  .title2{
     margin-bottom:10px;
     
@@ -81,9 +81,9 @@ textarea{
     margin-bottom: 10px;
     background-color: #17226b;
 }
-.form-contact input,
-.form-contact  textarea{
-    padding: 5px 5px;
+.form-contact .input-contact,
+.form-contact  .textarea-contact{
+    padding: 5px 5px !important;
     background-color: #ebe9e5;
     
 }
