--- a/src/propos/propos.css
+++ b/src/propos/propos.css
@@ -7,8 +7,8 @@
 }
 .section-propos{
   height: 100vh;
-  width: 100%;
-  background-color: #f6f6f6;
+  width: 100%;    
+    background-color: #c70e0e;
 
 }
 .section-propos .container-propos{
@@ -115,6 +115,12 @@
   position: relative;
   height: 100vh;
   width: 100%;
+}
+.article-propos{
+  background-color: #F19800;
+}
+.content-propos{
+  background-color: #7800f1;
 }
 @media screen and (max-width: 768px) {
   .container-propos {
